#1308 - Fix provider logo not showing #1305 - remove wallet connect on account menu

--- a/app/src/views/Login/Login.scss
+++ b/app/src/views/Login/Login.scss
@@ -129,7 +129,7 @@
   &.torus-dark {
     background: #2f3136 !important;
     border: 1px solid #404145 !important;
-    box-shadow: 0px 14px 28px rgba(92, 108, 127, 0.06);
+    box-shadow: 0px 14px 28px rgba(92, 108, 127, 0.06) !important;
     color: #ffffff !important;
   }
 }
